production/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-production
spec:
  selector:
    matchLabels:
      run: nginx-production
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx-production
    spec:
      containers:
      - name: nginx-production
        image: sundarbabu/petdemo:v3.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 16Mi
            cpu: 2m
