production/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-production
  labels:
    run: nginx-production
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-production
