production/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-production
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-production.devsecops.com`)
      kind: Rule
      services:
        - name: nginx-production
          port: 80
